--- a/Main.ipynb
+++ b/Main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,18 +10,68 @@
     "\n",
     "main = Tk()\n",
     "main.title('AutoComplete')\n",
-    "main.geometry(\"500x500\")\n",
+    "main.geometry(\"500x300\")\n",
     "\n",
-    "label = Label(main, text=\"Type Below\",\n",
-    "    font=(\"Helveltica\", 15), fg=\"grey\")\n",
+    "# Update the listbox\n",
+    "def update(data):\n",
+    "\t# Clear the listbox\n",
+    "\tmy_list.delete(0, END)\n",
     "\n",
-    "label.pack(pady=20)\n",
+    "\t# Add toppings to listbox\n",
+    "\tfor item in data:\n",
+    "\t\tmy_list.insert(END, item)\n",
     "\n",
-    "entry = Entry(main, font=(\"Helvetica\", 20))\n",
-    "entry.pack()\n",
+    "# Update entry box with listbox clicked\n",
+    "def fillout(e):\n",
+    "\t# Delete whatever is in the entry box\n",
+    "\tmy_entry.delete(0, END)\n",
     "\n",
-    "listbox = Listbox(main, width=50)\n",
-    "listbox.pack(pady=40)\n",
+    "\t# Add clicked list item to entry box\n",
+    "\tmy_entry.insert(0, my_list.get(ANCHOR))\n",
+    "\n",
+    "# Create function to check entry vs listbox\n",
+    "def check(e):\n",
+    "\t# grab what was typed\n",
+    "\ttyped = my_entry.get()\n",
+    "\n",
+    "\tif typed == '':\n",
+    "\t\tdata = toppings\n",
+    "\telse:\n",
+    "\t\tdata = []\n",
+    "\t\tfor item in toppings:\n",
+    "\t\t\tif typed.lower() in item.lower():\n",
+    "\t\t\t\tdata.append(item)\n",
+    "\n",
+    "\t# update our listbox with selected items\n",
+    "\tupdate(data)\t\t\t\t\n",
+    "\n",
+    "\n",
+    "# Create a label\n",
+    "my_label = Label(main, text=\"Start Typing...\",\n",
+    "\tfont=(\"Helvetica\", 14), fg=\"grey\")\n",
+    "\n",
+    "my_label.pack(pady=20)\n",
+    "\n",
+    "# Create an entry box\n",
+    "my_entry = Entry(main, font=(\"Helvetica\", 20))\n",
+    "my_entry.pack()\n",
+    "\n",
+    "# Create a listbox\n",
+    "my_list = Listbox(main, width=50)\n",
+    "my_list.pack(pady=40)\n",
+    "\n",
+    "# Create a list of pizza toppings\n",
+    "toppings = [\"Pepperoni\", \"Peppers\", \"Mushrooms\",\n",
+    "\t\"Cheese\", \"Onions\", \"Ham\", \"Taco\"]\n",
+    "\n",
+    "# Add the toppings to our list\n",
+    "update(toppings)\n",
+    "\n",
+    "# Create a binding on the listbox onclick\n",
+    "my_list.bind(\"<<ListboxSelect>>\", fillout)\n",
+    "\n",
+    "# Create a binding on the entry box\n",
+    "my_entry.bind(\"<KeyRelease>\", check)\n",
     "\n",
     "main.mainloop()\n",
     "\n"
